[package]
name = "diginet-scraper"
version = "0.1.1"
authors = ["Zexa <zexa@cock.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.10.10"
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
