[package]
name = "diginet-scraper"
version = "0.1.1"
authors = ["Zexa <zexa@cock.li>"]
edition = "2018"

[workspace]
members = ["skelbiu-lt-scraper", "common-scraper"]

[dependencies]
clap = "2.33.3"
reqwest = "0.10.10"
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
url = "2.2.0"
async-stream = "0.3"
anyhow = "1.0"
log = "0.4"
simple_logger = "1.11"