[package]
name = "skelbiu-lt-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-scraper = { path = "../common-scraper" }
url = "2.2.2"
reqwest = { version = "0.11.5", features = ["blocking"]}
scraper = "0.12.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
rocket_okapi = { version = "0.8.0-alpha-1" }
schemars = "0.8"
